<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".challenge_screens.ChallengeSentFragment">

    <TextView
        android:id="@+id/Challenge_sent_IntroTxtField"
        android:textSize="34sp"
        android:padding="5dp"
        android:textColor="?itemTextColor"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Challenge_sent_IntroTxt"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"

        android:text="@string/Challenge_sent_waiting_txt"
        android:textColor="?itemTextColor"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Challenge_sent_IntroTxtField" />

    <TextView
        android:id="@+id/textView_Note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"

        android:text="@string/challenge_sent_note"
        android:textColor="?itemTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Note">

        <Button
            android:id="@+id/button_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:text="@string/buttonBackTxt"
            android:textColor="?itemTextColor"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"

            android:background="@drawable/custom_button"
            android:text="@string/buttonHomeTxt"
            android:textColor="?itemTextColor"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_ERROR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"

        android:text="NOTE: THEY CAN'T ACCEPT YET"
        android:textColor="@color/error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_Note" />

</androidx.constraintlayout.widget.ConstraintLayout>