<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".challenge_screens.ChooseFriendFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friends_tile"
        android:textColor="?itemTextColor"
        android:textSize="36sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/C_search_friends"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/prompt_search_friend"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:hint="@string/prompt_search_friend"
        android:inputType="textEmailAddress"
        android:padding="12dp"

        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ListView
        android:id="@+id/C_friends_list"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_margin="16dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/C_search_friends" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_friends_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/C_friends_list"
        app:layout_constraintEnd_toEndOf="@id/C_friends_list"
        android:src="@drawable/ic_add"
        android:backgroundTint="?attr/colorPrimary"
        app:borderWidth="0dp"
        android:contentDescription="@string/add_friend_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>